<resources>
    <string name="app_name">Robot Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_main">Robot Remote</string>
    <string name="button_scan">Scan</string>
    <string name="button_cancel">Cancel</string>
    <string name="activity_device_list">Select a device</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="tab_calibration">Calibration</string>
    <string name="tab_control">Control</string>
    <string name="button_forward">Forward</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_backwards">Backwards</string>
    <string name="connected_to">Connected to %s</string>
    <string name="connection_failed">Unable to connect device</string>
    <string name="connection_lost">Device connection was lost</string>
</resources>
