<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="de.tilosp.robotremote.ControlFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_forward"
        android:id="@+id/button_forward"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_right"
        android:id="@+id/button_right"
        android:layout_below="@+id/button_forward"
        android:layout_toRightOf="@+id/button_forward"
        android:layout_toEndOf="@+id/button_forward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_left"
        android:id="@+id/button_left"
        android:layout_below="@+id/button_forward"
        android:layout_toLeftOf="@+id/button_forward"
        android:layout_toStartOf="@+id/button_forward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_backwards"
        android:id="@+id/button_backwards"
        android:layout_below="@+id/button_right"
        android:layout_centerHorizontal="true" />

</RelativeLayout>