<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        tools:context="de.tilosp.robotremote.DeviceListActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">
        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:id="@+id/button_cancel"
                android:layout_gravity="bottom"
                android:background="?android:attr/selectableItemBackground"/>
        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_scan"
                android:id="@+id/button_scan"
                android:layout_gravity="bottom"
                android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/title_paired_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/title_paired_devices"
                    android:textColor="#FFF"
            />

            <LinearLayout
                    android:id="@+id/paired_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stackFromBottom="true"
                    android:orientation="vertical"
            />

            <TextView
                    android:id="@+id/title_new_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/title_other_devices"
                    android:textColor="#FFF"
                    android:visibility="gone"
            />

            <LinearLayout
                    android:id="@+id/new_devices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stackFromBottom="true"
                    android:orientation="vertical"
            />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
